[gd_scene load_steps=8 format=1]

[ext_resource path="res://Scripts/MessageBoxes.gd" type="Script" id=1]
[ext_resource path="res://Fonts/MiscText2.fnt" type="BitmapFont" id=2]
[ext_resource path="res://Images/button.png" type="Texture" id=3]

[sub_resource type="StyleBoxTexture" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 3 )
margin/left = 100.0
margin/right = 100.0
margin/top = 1.0
margin/bottom = 1.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="Animation" id=2]

resource/name = "FadeIn"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 1.0 ] }

[sub_resource type="Animation" id=3]

resource/name = "FadeOut"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 1.0, 0.0 ] }
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0.5 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"destroy" } ] }

[sub_resource type="ConvexPolygonShape2D" id=4]

custom_solver_bias = 0.0
points = Vector2Array( 288, -32, 288, 96, -32, 96, -32, -32 )

[node name="MessageBox" type="Control"]

visibility/opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )
standaloneText = null
timed = false
mode = "Standalone"
animType = null
waitTime = 0
PeaceText = null
ChaosText = null

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 256.0
margin/bottom = 64.0
custom_fonts/font = ExtResource( 2 )
text = "TESSSTETETSTST"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Panel" type="Panel" parent="Label"]

visibility/behind_parent = true
anchor/left = 2
anchor/top = 2
anchor/right = 2
anchor/bottom = 2
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1.0
margin/bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/FadeIn = SubResource( 2 )
anims/FadeOut = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="Area2D" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]

build_mode = 0
polygon = Vector2Array( -32, -32, -32, 96, 288, 96, 288, -32 )
shape_range = Vector2( 0, 0 )
trigger = false

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="body_enter" from="Area2D" to="." method="_on_Area2D_body_enter"]

[connection signal="body_exit" from="Area2D" to="." method="_on_Area2D_body_exit"]


